[gd_scene load_steps=5 format=3 uid="uid://bme51y6kb8x3i"]

[ext_resource type="Script" path="res://World/HUD.gd" id="1_5ax74"]

[sub_resource type="Gradient" id="Gradient_crqdm"]
offsets = PackedFloat32Array(0.105263, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.101961, 0.101961, 0.101961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qywir"]
gradient = SubResource("Gradient_crqdm")

[sub_resource type="CanvasTexture" id="CanvasTexture_ltgwh"]
diffuse_texture = SubResource("GradientTexture2D_qywir")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_5ax74")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.509804)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -173.0
offset_right = -109.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 0
rotation = -1.5708
scale = Vector2(0.806664, 1.62483)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("CanvasTexture_ltgwh")

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.823529)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 166.0
offset_right = 230.0
offset_bottom = 218.0
grow_horizontal = 2
rotation = -4.71239
scale = Vector2(0.806664, 1.62483)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("CanvasTexture_ltgwh")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -151.0
offset_right = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 11
theme_override_constants/margin_bottom = 8

[node name="HBC_Top" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 60

[node name="Label_Discs" type="Label" parent="MarginContainer/HBC_Top"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Discs: "

[node name="Label_Throws" type="Label" parent="MarginContainer/HBC_Top"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Throws: "

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 40
alignment = 1

[node name="Label_Power" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Power: "

[node name="Label_Tilt" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Tilt: "

[node name="Label_Spin" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "Spin: "
